// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BatchEdit matches snapshot when >0 records are missing info 1`] = `
<DocumentFragment>
  <div
    class="grid-container"
  >
    <button
      class="usa-button usa-button--unstyled margin-top-2 text-bold bx--btn bx--btn--primary"
      tabindex="0"
      type="button"
    >
      <span
        class="oec-text-with-icon"
      >
        <svg
          class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-left oec-text-with-icon__icon--side-left"
        >
          arrowRight.svg
        </svg>
        Back to roster
      </span>
    </button>
    <h1
      class="margin-bottom-1"
    >
      Add needed information
    </h1>
    <div
      class="oec-loading-wrapper"
    >
      <div
        aria-atomic="true"
        aria-labelledby="loading-id-4"
        aria-live="assertive"
        class="bx--loading"
      >
        <label
          class="bx--visually-hidden"
          id="loading-id-4"
        >
          Active loading indicator
        </label>
        <svg
          class="bx--loading__svg"
          viewBox="0 0 100 100"
        >
          <title>
            Active loading indicator
          </title>
          <circle
            class="bx--loading__stroke"
            cx="50%"
            cy="50%"
            r="44"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BatchEdit matches snapshot when no records are missing info 1`] = `
<DocumentFragment>
  <div
    class="grid-container"
  >
    <button
      class="usa-button usa-button--unstyled margin-top-2 text-bold bx--btn bx--btn--primary"
      tabindex="0"
      type="button"
    >
      <span
        class="oec-text-with-icon"
      >
        <svg
          class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-left oec-text-with-icon__icon--side-left"
        >
          arrowRight.svg
        </svg>
        Back to roster
      </span>
    </button>
    <h1
      class="margin-bottom-1"
    >
      Add needed information
    </h1>
    <div
      class="oec-loading-wrapper"
    >
      <div
        aria-atomic="true"
        aria-labelledby="loading-id-1"
        aria-live="assertive"
        class="bx--loading"
      >
        <label
          class="bx--visually-hidden"
          id="loading-id-1"
        >
          Active loading indicator
        </label>
        <svg
          class="bx--loading__svg"
          viewBox="0 0 100 100"
        >
          <title>
            Active loading indicator
          </title>
          <circle
            class="bx--loading__stroke"
            cx="50%"
            cy="50%"
            r="44"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
